--- a/RIFF.Web.Core/Views/System/Tasks.cshtml
+++ b/RIFF.Web.Core/Views/System/Tasks.cshtml
@@ -46,6 +46,7 @@
                     //{ dataField: 'SchedulerRange', caption: 'Range', width: "175px", alignment: "center"  },
                     //{ dataField: 'Trigger', caption: 'Trigger', width: "100px" },
 
+                    { dataField: 'IsEnabled', caption: 'Enabled', dataType: 'boolean', width: "80px", visible: true },
                     { dataField: 'IsSystem', caption: 'Sys?', dataType: 'boolean', width: "80px", visible: false, sortOrder: 'asc', sortIndex: 0 },
 
                     { dataField: 'Status', caption: 'Status', width: "80px", dataType: 'string', alignment: "center" },
