--- a/RIFF.Web.Core/Content/Site.less
+++ b/RIFF.Web.Core/Content/Site.less
@@ -228,7 +228,7 @@ tr.dx-state-hover {
 
 tr:not(.dx-state-hover) {
     td.dxr-totalcolumn {
-        background-color: #fcfdfe;//rgba(247, 249, 252, 0.5);
+        background-color: #fcfdfe; //rgba(247, 249, 252, 0.5);
     }
 }
 
@@ -253,4 +253,12 @@ tr:not(.dx-state-hover) {
 
 .dx-theme-generic-typography {
     background-color: transparent;
+}
+
+.dx-datagrid .dx-row-alt > td {
+    background-color: #fcfdfd;
+}
+
+.dx-datagrid-rowsview .dx-row.dx-group-row {
+    color: #777;
 }
