--- a/RIFF.Framework/Email/GenericEmail.cshtml
+++ b/RIFF.Framework/Email/GenericEmail.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits RazorEngine.Templating.TemplateBase<RIFF.Framework.RFGenericEmail>
+﻿@inherits RIFF.Framework.RFTemplateBase<RIFF.Framework.RFGenericEmail>
 @{
     Layout = typeof(RIFF.Framework._EmailLayout).FullName;
 }
