--- a/RIFF.Framework/Email/ImageListEmail.cshtml
+++ b/RIFF.Framework/Email/ImageListEmail.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Linq
-@inherits RazorEngine.Templating.TemplateBase<RIFF.Framework.RFImageListEmailModel>
+@inherits RIFF.Framework.RFTemplateBase<RIFF.Framework.RFImageListEmailModel>
 <html>
 <body style="margin: 0; padding: 0;">
     @if (!string.IsNullOrWhiteSpace(Model.HeaderHTML))
