--- a/RIFF.Framework/Email/ImageEmail.cshtml
+++ b/RIFF.Framework/Email/ImageEmail.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits RazorEngine.Templating.TemplateBase<System.Drawing.Image>
+﻿@inherits RIFF.Framework.RFTemplateBase<System.Drawing.Image>
 <html>
 <body style="margin: 0; padding: 0;">
     <img src="cid:Image" alt="Image" width="@Model.Width" height="@Model.Height" style="width: @(Model.Width)px; height: @(Model.Height)px" />
